@@ -9,6 +9,7 @@ use Drupal\field\Tests\EntityReference\EntityReferenceTestTrait;
 use Drupal\search_api\Entity\Index;
 use Drupal\search_api\Entity\Server;
 use Drupal\search_api\Item\Field;
+use Drupal\search_api\Processor\ProcessorInterface;
 use Drupal\search_api_test\PluginTestTrait;
 use Drupal\taxonomy\Tests\TaxonomyTestTrait;
 
@@ -195,6 +196,36 @@ class ProcessorIntegrationTest extends SearchApiBrowserTestBase {
     // locked.
     $this->checkUrlFieldIntegration();
 
+    // Check the order of the displayed processors.
+    $stages = [
+      ProcessorInterface::STAGE_PREPROCESS_INDEX,
+      ProcessorInterface::STAGE_PREPROCESS_QUERY,
+      ProcessorInterface::STAGE_POSTPROCESS_QUERY,
+    ];
+    /** @var \Drupal\search_api\Processor\ProcessorInterface[] $processors */
+    $processors = $this->loadIndex()->createPlugins('processor');
+    $page = $this->getSession()->getPage();
+    foreach ($stages as $stage) {
+      // Since the order of processors with the same weight is undefined, we
+      // can't just use $index->getProcessorsByStage() and assertEquals().
+      $previous_weight = NULL;
+      $class = 'search-api-stage-wrapper-' . Html::cleanCssIdentifier($stage);
+      /** @var \Behat\Mink\Element\NodeElement $element */
+      foreach ($page->findAll('css', ".$class tr.draggable") as $element) {
+        // Since processors are shown right away when checked in the form, they
+        // are even included in the form when disabled – just hidden. We can
+        // check the "style" attribute to identify them.
+        if (preg_match('/\bsearch-api-processor-weight--([-a-z0-9]+)\b/', $element->getAttribute('class'), $m)) {
+          $processor_id = str_replace('-', '_', $m[1]);
+          $weight = $processors[$processor_id]->getWeight($stage);
+          if ($previous_weight !== NULL) {
+            $this->assertGreaterThanOrEqual($previous_weight, $weight, "Correct order of processor $processor_id in stage $stage");
+          }
+          $previous_weight = $weight;
+        }
+      }
+    }
+
     // Check whether disabling processors also works correctly.
     $this->loadProcessorsTab();
     $edit = [
@@ -208,7 +239,7 @@ class ProcessorIntegrationTest extends SearchApiBrowserTestBase {
   }
 
   /**
-   * Test that the "Alter processors test backend" actually alters processors.
+   * Tests that processors discouraged by the backend are correctly hidden.
    *
    * @see https://www.drupal.org/node/2228739
    */
